# moria-server

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/api/: dependencies.py
app/api/routes/: api.py  authentication.py  cards.py
app/core/: events.py
app/db/: events.py
app/models/domain/: cards.py  decks.py  rwmodel.py
tests/: conftest.py
tests/test_api/test_routes/: test_cards.py
